Compaible con API 21 en adelante. Android 5.0 Lollipop. Inicia sesion con facebook. Estan comentadas formulario de sesion manual. Perfil de usuario con datos traidos desde facebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="setRange">Botones</string>
     <string name="cazar">Cazar</string>
     <string name="perfil">Perfil</string>
+    <string name="login">Login</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_login">Sign in</string>
 
